:pull: https://github.com/elastic/beats/pull/

////////////////////////////////////////////////////////////
// Template, add newest changes here

=== Beats version HEAD
https://github.com/elastic/beats/compare/v1.2.1...1.2[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*


==== Bugfixes

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

==== Added

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

==== Deprecated

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-1.2.1]]
=== Beats version 1.2.1
https://github.com/elastic/beats/compare/v1.2.0...v1.2.1[View commits]

==== Breaking changes

*Affecting all Beats*

- Require braces for environment variable expansion in config files {pull}1304[1304]

==== Bugfixes

*Affecting all Beats*

- Removed deprecation warning for the Redis output. {pull}1282[1282]

*Topbeat*

- Fixed name of the setting `stats.proc` to `stats.process` in the default configuration file. {pull}1343[1343]
- Fix issue with cpu.system_p being greater than 1 on Windows {pull}1128[1128]

*Filebeat*
- Improvements in registrar dealing with file rotation. {pull}1281[1281]

==== Added

*Topbeat*

- Add username to processes {pull}845[845]

[[release-notes-1.2.0]]
=== Beats version 1.2.0
https://github.com/elastic/beats/compare/v1.1.2...v1.2.0[View commits]

==== Breaking changes

*Filebeat*

- Default config for ignore_older is now infinite instead of 24h, means ignore_older is disabled by default. Use close_older to only close file handlers.

==== Bugfixes

*Packetbeat*

- Split real_ip_header value when it contains multiple IPs {pull}1241[1241]

*Winlogbeat*

- Fix invalid `event_id` on Windows XP and Windows 2003 {pull}1227[1227]

==== Added

*Affecting all Beats*
